apps/nextcloud/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  hostnames:
    - "nextcloud.${domain}"
    - "nextcloud.${env}.${domain}"
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: internal-https
    - name: traefik
      namespace: traefik 
      sectionName: external-https
  rules:
    - backendRefs:
        - name: nextcloud
          port: 80
